# yt-downloader

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  yt_playlist.py
.github/workflows/: ci.yml
yt_downloader/: cli.py
yt_downloader_cli.egg-info/: PKG-INFO  SOURCES.txt
