[project]
name = "yt-downloader-cli"
version = "1.0.2"
description = "YouTube video and playlist downloader CLI tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "yt-dlp"
]

[project.scripts]
yt-downloader = "yt_downloader.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"