[project]
name = "yt-downloader-cli"
version = "1.1.7"
description = "YouTube video and playlist downloader CLI tool"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "yt-dlp",
  "tqdm"
]

[project.scripts]
yt-downloader = "yt_downloader.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"